# simple-bookmarks-manager

./: .bumpversion.cfg  README.md  pyproject.toml
simple_bookmarks_manager/: cli.py
tests/: test_simple_bookmarks_manager.py
