[tool.poetry]
name = "simple-bookmarks-manager"
version = "0.1.0"
description = ""
authors = ["0djentd <58089540+0djentd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
click = "^8.1.3"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
