[tool.poetry]
name = "simple-bookmarks-manager"
version = "0.2.0"
description = "Browser-agnostic bookmarks manager."
authors = ["0djentd"]

[tool.poetry.scripts]
simple-bookmarks-manager = "simple_bookmarks_manager.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
click = "^8.1.3"
rich = "^12.5.1"
pyperclip = "^1.8.2"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
